MDEV-35834 Server crash in FVector::distance_to upon concurrent SELECT

a start node in the shared context must be atomically assigned
to a valid and fully initialized node otherwise a concurrent
thread might use it before it's safe